# Prog-Concurrente-Vrancic-Pagliaricci

./: .gitignore  Cargo.toml  README.md
PracticaParcial/BarberShop/: Cargo.toml
PracticaParcial/BarberShop/src/: barbershop.rs  main.rs
PracticaParcial/TP1/: Cargo.toml
PracticaParcial/TP1/src/: main.rs  thread_pool.rs
TPs/TP1/: Preguntas.txt
TPs/TP1/src/: main.rs  server.rs
TPs/TP1/src/server/: handler.rs
TPs/TP1/src/server/handler/: math.rs
TPs/TP2/src/: main.rs  server.rs
TPs/TP2/src/server/: handler.rs
TPs/TP2/src/server/handler/: math.rs
TPs/TP3/: Cargo.toml
TPs/TP3(MiniGrep)/: Main.rs
TPs/TP3/src/: lib.rs  main.rs
TPs/TP4/: Cargo.toml  main.rs
TPs/TP5/: Cargo.toml
TPs/TP5/src/: lib.rs  lockfree.rs  main.rs
TPs/TPMiniGrep/: Cargo.toml
TPs/tp4/: Cargo.toml  output.json
TPs/tp4/src/: handler.rs  lib.rs  limiter.rs  main.rs  stats.rs  threadpool.rs
TPs/tp4/tp4_test/: archivo.txt
TPs/tp5/: Cargo.toml  respuestas.txt  results.json
TPs/tp5/src/: blocking_queue.rs  lib.rs  main.rs  non_blocking_queue.rs
TPs/tp6/: Cargo.toml  output.json
TPs/tp6/src/: actors.rs  bfs_manager.rs  lib.rs  main.rs  messages.rs  wiki.rs
TPs/tp7/: Cargo.toml  commands.txt  results.json
TPs/tp7/src/: async_mod.rs  main.rs  threads.rs
TPs/tpminigrep/: Cargo.toml
TPs/tpminigrep/src/: main.rs
TPs/tpminigrep/src/libros/: frankenstein.txt  romeo.txt
TPs/tpminigrep/src/search/: mod.rs  per_chunk.rs  per_file.rs  seq.rs
src/: server.rs
src/server/: handler.rs
